vlib/v/checker/tests/infix_is_unknown_generic_concrete_type_err.vv
interface Value {}

struct Box[T] {
	val T
}

fn main() {
	v := Value(Box[int]{})
	if v is Box[Missing] {
		println('yes')
	}
}
